add favicon, audio file, change timer function

--- a/index.html
+++ b/index.html
@@ -3,7 +3,28 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <!-- Icon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/images/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/images/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/images/site.webmanifest" />
+    <!-- Styles -->
+    <link rel="stylesheet" href="./assets/styles/style.css" />
+
     <title>Pomodoro Timer</title>
   </head>
   <body>
@@ -19,6 +40,6 @@
         <button class="button" id="reset">Reset</button>
       </div>
     </div>
-    <script src="./index.js"></script>
+    <script src="./assets/js/index.js"></script>
   </body>
 </html>
