--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
         <button class="button" id="short-break">Short break</button>
         <button class="button" id="long-break">Long break</button>
       </div>
-      <div class="timer-string">25:00</div>
+      <div class="timer-string">00:25</div>
       <div class="button-container">
-        <button class="button" id="start">Start</button>
+        <button class="button" id="switch">Start</button>
         <button class="button" id="reset">Reset</button>
       </div>
     </div>
